--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body .container-fluid{
 	font-family: 'Poppins', Arial, sans-serif;
 }
-.container-fluid h1, h2, h3, h4, h5, h6 {
+.container-fluid h1, .container-fluid h2, h3, h4, h5, h6 {
 	font-family: 'Space Grotesk', Arial, sans-serif;
 }
 .nav-item{
@@ -11,7 +11,11 @@ body .container-fluid{
     background-color: rgb(10, 204, 204);
     color: #F5F6FA;
     border: none;
-    padding: 10px;
+    padding: 15px;
+    border-radius: 5px;
+}
+#home-section{
+    margin-top: 60px;
 }
 #home-section p{
     font-size: 1rem;
@@ -21,5 +25,57 @@ body .container-fluid{
     background-color: rgb(10, 204, 204);
     color: #F5F6FA;
     border: none;
-    padding: 15px;
+    padding: 10px;
+    border-radius: 5px;
 }
+/* aboutme section */
+#aboutme{
+    margin-top: 100px;
+    margin-left:5px;
+    margin-right: 5px;
+}
+#aboutme #img-profile{
+    width:100px;
+    border: 1px dashed rgb(10, 204, 204);
+    border-radius: 50%;
+}
+#aboutme-photo{
+    border-radius:15px;
+    border: 1px solid rgb(10, 204, 204);
+}
+#aboutme-photo #img-profile{
+    margin-top: 30px;
+}
+#aboutme-photo .sub-name{
+    font-weight: bold;
+    margin-top:10px;
+    color: rgb(10, 204, 204);
+}
+#aboutme-text .description{
+    text-align:left;
+    width: 100%;
+}
+#aboutme-text .titre{
+    display: flex;
+    padding: 2px;
+}
+.experience1 #img-experience{
+    width: 30px;
+    height: 30px;
+}
+.experience1{
+    display: flex;
+    border: 1px dashed rgb(10, 204, 204);
+    padding: 10px;
+}
+.experience1 p{
+    padding: 10px;
+}
+#icone-titre{
+    color: rgb(10, 204, 204);
+}
+/* aboutme section */
+
+/* Skills section */
+
+/* Skills section */
