--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap');
 body .container-fluid{
 	font-family: 'Poppins', Arial, sans-serif;
 }
 .container-fluid h1, .container-fluid h2, h3, h4, h5, h6 {
 	font-family: 'Space Grotesk', Arial, sans-serif;
+}
+.navbar-nav .nav-item a{
+    font-weight: 300;
+}
+.navbar-nav .nav-item a:hover{
+    background-color: rgb(10, 204, 204);
+    padding: 15px;
+    color: white;
+    border-radius: 10px;
+    transition: linear 0.5s;
 }
 .nav-item{
     padding: 15px;
@@ -11,11 +22,19 @@ body .container-fluid{
     background-color: rgb(10, 204, 204);
     color: #F5F6FA;
     border: none;
-    padding: 15px;
+    padding: 10px;
     border-radius: 5px;
 }
+.nav-item #contact:hover{
+    background-color: whitesmoke;
+    color: rgb(10, 204, 204);
+    padding: 12px;
+    transition: linear 0.5s;
+}
 #home-section{
-    margin-top: 60px;
+    height: 30vh;
+    margin-top: 90px;
+    margin-bottom:50px;
 }
 #home-section p{
     font-size: 1rem;
@@ -25,8 +44,15 @@ body .container-fluid{
     background-color: rgb(10, 204, 204);
     color: #F5F6FA;
     border: none;
-    padding: 10px;
+    padding: 15px;
     border-radius: 5px;
+}
+#home-section button:hover{
+    background-color: rgb(240, 240, 240);
+    color: rgb(10, 204, 204);
+    padding: 15px;
+    border: 1px solid black;
+    transition:linear 0.5s;
 }
 /* aboutme section */
 #aboutme{
@@ -59,6 +85,9 @@ body .container-fluid{
     display: flex;
     padding: 2px;
 }
+#aboutme-text .titre h2{
+    font-weight: bold;
+}
 .experience1 #img-experience{
     width: 30px;
     height: 30px;
@@ -72,6 +101,7 @@ body .container-fluid{
     padding: 10px;
 }
 #icone-titre{
+    padding-right: 5px;
     color: rgb(10, 204, 204);
 }
 /* aboutme section */
