--- a/style.css
+++ b/style.css
@@ -1,19 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap');
+
 body .container-fluid{
-	font-family: 'Poppins', Arial, sans-serif;
-}
-.container-fluid h1, .container-fluid h2, h3, h4, h5, h6 {
 	font-family: 'Space Grotesk', Arial, sans-serif;
 }
 .navbar-nav .nav-item a{
-    font-weight: 300;
+    font-weight: bolder;
+    font-family: "Space Grotesk";
 }
 .navbar-nav .nav-item a:hover{
     background-color: rgb(10, 204, 204);
-    padding: 15px;
+    padding: 10px;
     color: white;
-    border-radius: 5px;
-    transition: linear 0.5s;
+    transition: linear 0.3s;
 }
 .nav-item{
     padding: 15px;
@@ -23,36 +20,31 @@ body .container-fluid{
     color: #F5F6FA;
     border: none;
     padding: 10px;
-    border-radius: 5px;
 }
 .nav-item #contact:hover{
-    background-color: whitesmoke;
+    background-color: rgb(240, 240, 240);
     color: rgb(10, 204, 204);
-    padding: 12px;
-    transition: linear 0.5s;
+    transition: linear 0.2s;
+    border:1px solid rgb(10, 204, 204);
 }
 #home-section{
-    height: 30vh;
-    margin-top: 90px;
-    margin-bottom:50px;
+    height:40vh;
+    margin-top:100px;
 }
 #home-section p{
     font-size: 1rem;
 }
-
-#home-section button{
-    background-color: rgb(10, 204, 204);
-    color: #F5F6FA;
-    border: none;
+#home-section .btn-homesection a{
+    text-decoration: none;
+    color: white;
+    background-color:rgb(10, 204, 204);
     padding: 15px;
-    border-radius: 5px;
-    font-family: "Space Grotesk";
 }
-#home-section button:hover{
+#home-section .btn-homesection a:hover{
     background-color: rgb(240, 240, 240);
     color: rgb(10, 204, 204);
     padding: 15px;
-    border: 1px solid black;
+    border: 1px solid rgb(10, 204, 204);
     transition:linear 0.5s;
 }
 /* aboutme section */
@@ -120,6 +112,12 @@ body .container-fluid{
     padding: 10px;
     border-radius: 5px;
     margin-right: 5px;
+}
+#projects #btn1:hover{
+    background-color: rgb(240, 240, 240);
+    color: rgb(10, 204, 204);
+    transition: linear 0.3s;
+    border: 1px solid rgb(10, 204, 204);
 }
 #projects #btn2{
     background-color:rgb(209 213 219);
