--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body .container-fluid{
 }
 .navbar-nav .nav-item a:hover{
     background-color: rgb(10, 204, 204);
+    box-shadow: 1px 2px 20px rgb(10, 204, 204);
     padding: 10px;
     color: white;
     transition: linear 0.3s;
@@ -25,6 +26,7 @@ body .container-fluid{
     color: rgb(10, 204, 204);
     transition: linear 0.2s;
     border:1px solid rgb(10, 204, 204);
+    box-shadow: 1px 2px 20px rgb(10, 204, 204);
 }
 #home-section{
     height:60vh;
@@ -197,6 +199,29 @@ body .container-fluid{
 }
 #footer #social-network a:hover i {
     transform: scale(1.20) rotate(-8deg);
+}
+/* Bouton retour en haut */
+#btnTop {
+    display: none;
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    z-index: 99;
+    font-size: 20px;
+    border: none;
+    outline: none;
+    background:black;
+    color: rgb(10, 204, 204);
+    box-shadow: 1px 1px 30px rgb(10, 204, 204);
+    cursor: pointer;
+    padding: 10px 15px;
+    border-radius: 10px;
+}
+#btnTop:hover {
+    background: rgb(209 213 219);
+    color: rgb(10, 204, 204);
+    transform: scale(1.1);
+    border: 1px solid rgb(10, 204, 204);
 }
 /* Footer section */
 
