--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 body .container-fluid{
-	font-family: 'Poppins', Arial, sans-serif;
-    /*background: linear-gradient(to left, rgb(110, 110, 110), rgb(209 213 219));*/
+    font-family:"Open Sans", sans-serif;
+
 }
 /* home section */
 .navbar-nav .nav-item a{
@@ -32,10 +34,13 @@ body .container-fluid{
     box-shadow: 1px 2px 20px rgb(10, 204, 204);
 }
 #home-section{
-    height:90vh;
     margin-top:100px;
+    height:100vh;
     color: white;
 
+}
+#home-section #element{
+    color: rgb(10, 204, 204);
 }
 #home-section p{
     font-size: 1rem;
@@ -56,7 +61,7 @@ body .container-fluid{
 
 /* aboutme section */
 #aboutme{
-    margin-top: 100px;
+    margin-top: 80px;
     margin-left:5px;
     margin-right: 5px;
     padding-bottom:70px;
@@ -166,8 +171,8 @@ body .container-fluid{
     padding: 10px;
     margin-top: 100px;
 }
-#footer #links-footer a{
-    text-transform: uppercase;
+#footer #links-footer a, #num-footer{
+    font-size:12px;
     text-decoration: none;
     color: white;
     padding: 2px;
@@ -224,8 +229,8 @@ body .container-fluid{
 }
 @media screen and (max-width:600px){
     #skills-section #technos img{
-        width:100px;
-        height:100px;
+        width:200px;
+        height:200px;
     }
 }
 @media screen and (max-width:337px) {
