--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 body .container-fluid{
-    font-family:"Open Sans", sans-serif;
+    font-family:"Playfair Display", sans-serif;
 
 }
 /* home section */
 .navbar-nav .nav-item a{
-    font-family: "Poppins";
+    font-family: "Playfair Display";
     color: white;
 }
 .navbar-nav .nav-item a:hover{
@@ -61,7 +59,7 @@ body .container-fluid{
 
 /* aboutme section */
 #aboutme{
-    margin-top: 80px;
+    margin-top: 0px;
     margin-left:5px;
     margin-right: 5px;
     padding-bottom:70px;
